--- a/CourseRegister-fullStack/CourseRegister/CourseRegister/src/main/resources/application.properties
+++ b/CourseRegister-fullStack/CourseRegister/CourseRegister/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.application.name=Courseregister
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/Courseregister
-spring.datasource.username = root
-spring.datasource.password = Maheswari@123
-spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+server.port=${PORT:8080}
 
